# dashboard/mock/swagger.yml
@@ -268,6 +268,68 @@ paths:
           description: OK
           content:
           application/json:
+  /services:
+    post:
+      tags:
+          - services
+      summary:
+      description:
+      operationId: createService
+      parameters:
+      response:
+        200:
+          description: OK
+          content:
+          application/json:
+    get:
+      tags:
+          - services
+      summary:
+      description:
+      operationId: getServiceList
+      parameters:
+      response:
+        200:
+          description: OK
+          content:
+          application/json:
+  /services/{id}:
+    get:
+      tags:
+          - services
+      summary:
+      description:
+      operationId: getService
+      parameters:
+      response:
+        200:
+          description: OK
+          content:
+          application/json:
+    put:
+      tags:
+          - updateService
+      summary:
+      description:
+      operationId: updateRoute
+      parameters:
+      response:
+        200:
+          description: OK
+          content:
+          application/json:
+    delete:
+      tags:
+          - updateService
+      summary:
+      description:
+      operationId: removeService
+      parameters:
+      response:
+        200:
+          description: OK
+          content:
+          application/json:
   /articles:
     get:
       tags:
