# dashboard/src/api/schema/services.ts
@@ -1,8 +1,34 @@
 import request from '@/utils/request'
+import { IServiceData } from '../types'
 
-export const getRoles = (params: any) =>
+export const getList = () =>
   request({
-    url: '/roles',
-    method: 'get',
+    url: '/services',
+    method: 'get'
+  })
+
+export const update = (id: string, params: IServiceData) =>
+  request({
+    url: `/services/${id}`,
+    method: 'PUT',
+    params
+  })
+
+export const get = (id: string) =>
+  request({
+    url: `/services/${id}`,
+    method: 'GET'
+  })
+
+export const remove = (id: string) =>
+  request({
+    url: `/services/${id}`,
+    method: 'DELETE'
+  })
+
+export const create = (params: IServiceData) =>
+  request({
+    url: '/services',
+    method: 'POST',
     params
   })
